--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <title>Evaluacion</title>
 </head>
 <body>
-   hola
-    }
-    
+    <header class="header">
+        <img class="logo" src="./css/adalab-logo-155x61.png" alt="logo Adalab" />
+        <nav class="menu">
+            <ul class="lista">
+                <li> Blog</li>
+                <li> Contacto</li>
+            </ul>
+        </nav>   
+    </header>   
+    <main>
+        <h1>
+            Creando Diversidad Digital
+        </h1>
+    </main> 
 </body>
 </html>
