--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?
+family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Evaluacion</title>
 </head>
@@ -17,8 +20,8 @@
             </ul>
         </nav>   
     </header>   
-    <main>
-        <h1>
+    <main class="main">
+        <h1 class="titulo">
             Creando Diversidad Digital
         </h1>
     </main> 
