--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <img class="logo" src="./css/adalab-logo-155x61.png" alt="logo Adalab" />
+        <a href="https://adalab.es/#home#/"> <img class="logo" src="./css/adalab-logo-155x61.png" alt="logo Adalab" /></a>
         <nav class="menu">
             <ul class="lista">
                 <li> Blog</li>
