--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@ family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <a href="https://adalab.es/#home#/"> <img class="logo" src="./css/adalab-logo-155x61.png" alt="logo Adalab" /></a>
+        <a class="logo-link" href="https://adalab.es/#home#/"> 
+        <img class="logo" src="./css/images/adalab-logo-155x61.png" alt="logo Adalab" title="logo"/></a>
         <nav class="menu">
-            <ul class="lista">
-                <li> Blog</li>
-                <li> Contacto</li>
+            <ul class="list">
+                <li><a href="#" class="link">Blog</a> </li>
+                <li><a href="#" class="link">Contacto</a></li>
             </ul>
         </nav>   
     </header>   
     <main class="main">
-        <h1 class="titulo">
-            Creando Diversidad Digital
+        <h1 class="title">
+            Creando diversidad digital
         </h1>
     </main> 
 </body>
